unordered list cities visited

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>html exercise</title>
     </head>
     <body>
-        
+        <ul>
+            <li>Seattle</li>
+            <li>Kathmandu</li>
+            <li>Tansen</li>
+        </ul>
+
+
     </body>
 </html>
