ordered list cities to visit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             <li>Kathmandu</li>
             <li>Tansen</li>
         </ul>
+    
+        <ol>Dera Beas</ol>
+        <ol>Portland</ol>
+        <ol>Victoria</ol>
 
 
     </body>
