--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
         <title>html exercise</title>
     </head>
     <body>
+        <h2>Cities I have visited</h2>
         <ul>
             <li>Seattle</li>
             <li>Kathmandu</li>
             <li>Tansen</li>
         </ul>
+        <h2>Cities I want to visit</h2>
     
-        <ol>Dera Beas</ol>
-        <ol>Portland</ol>
-        <ol>Victoria</ol>
+        <ol>
+            <li>Dera Beas</li>
+            <li>Portland</li>
+            <li>Portland</li>
+        </ol>
+        
 
 
     </body>
