--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     </head>
     <body>
         <h2>Cities I have visited</h2>
+        <p>I live in Seattle. I lived in Kathmandu before I came to the states. I lived in Tansen when I was an infant</p>
         <ul>
             <li>Seattle</li>
             <li>Kathmandu</li>
             <li>Tansen</li>
         </ul>
         <h2>Cities I want to visit</h2>
+        <p>Dera Beas is a heaven on earth, Portland is beautiful, and so is Victoria </p>
     
         <ol>
             <li>Dera Beas</li>
             <li>Portland</li>
-            <li>Portland</li>
+            <li>Victoria</li>
         </ol>
         
 
