Added info to cities with span

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <h2>Cities I have visited</h2>
         <p>I live in Seattle. I lived in Kathmandu before I came to the states. I lived in Tansen when I was an infant</p>
         <ul>
-            <li>Seattle</li>
-            <li>Kathmandu</li>
-            <li>Tansen</li>
+            <li>Seattle <span>is an evergreen city. I currently live here</span></li>
+            <li>Kathmandu<span>is the capital city of Nepal and is a tourist destination</span></li>
+            <li>Tansen<span>is one of the oldest cities in Nepal. There is a palace in Tansen city.</span></li>
         </ul>
         <h2>Cities I want to visit</h2>
         <p>Dera Beas is a heaven on earth, Portland is beautiful, and so is Victoria </p>
     
         <ol>
-            <li>Dera Beas</li>
-            <li>Portland</li>
-            <li>Victoria</li>
+            <li>Dera Beas<span> is one of the peaceful places, people are kind and affectionate</span></li>
+            <li>Portland<span> is in Oregon, it is absolutely beautiful</span></li>
+            <li>Victoria<span> is located in Canada, and is a beautiful city with lakes</span></li>
         </ol>
         
 
