Added strong and em

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <p>Dera Beas is a heaven on earth, Portland is beautiful, and so is Victoria </p>
     
         <ol>
-            <li>Dera Beas<span> is one of the peaceful places, people are kind and affectionate</span></li>
-            <li>Portland<span> is in Oregon, it is absolutely beautiful</span></li>
+            <li>Dera Beas<span> is one of the <strong> most peaceful places,</strong> people are kind and affectionate</span></li>
+            <li>Portland<span> is in Oregon, it is <em> absolutely beautiful</em></span></li>
             <li>Victoria<span> is located in Canada, and is a beautiful city with lakes</span></li>
         </ol>
         
