--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li>Portland<span> is in Oregon, it is <em> absolutely beautiful</em></span></li>
             <li>Victoria<span> is located in Canada, and is a beautiful city with lakes</span></li>
         </ol>
+        <img class="fit picture"
+            src="https://interactive-examples.mdn.mozilla.net/media/examples/grapefruit-slice-332-332.jpg"
+            alt="grapefruit slice atop of pile of other slices">
         
 
 
